--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -12,19 +12,25 @@
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
 
-        <td><p>フォロー数：<%= user.followings.count %></p></td>
-				<td><p>フォロワー数：<%= user.followers.count %></p></td>
+        <td><p>フォロー数：<%= user.relationships.count %></p></td>
+				<td><p>フォロワー数：<%= user.reverse_of_relationships.count %></p></td>
 
-        <td><% if current_user != user %>
-  				<% if user.followed_by?(current_user) %>
-  				<p><%=link_to "フォロー解除", user_relationships_path(user.id), method: :delete %></p>
-  				<% else %>
-  				<p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
-  				<% end %>
-  				<% end %>
-  				</td>
+        <td>
+          <% unless current_user == user %>
+  <% if current_user.following?(user) %>
+    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+      <%= hidden_field_tag :follow_id, user.id %>
+      <%= f.submit 'Unfollow' %>
+    <% end %>
+  <% else %>
+    <%= form_for(current_user.relationships.build) do |f| %>
+      <%= hidden_field_tag :follow_id, user.id %>
+      <%= f.submit 'Follow' %>
+    <% end %>
+  <% end %>
+<% end %>
+  		　</td>
 
-        <td><%= render 'relationships/follow_button', user: current_user %></td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
