--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,17 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= link_to user.relationships.count, relationships_follows_path(user.id) %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= link_to user.reverse_of_relationships.count, relationships_followers_path(user.id) %></th>
+
+  </tr>
+
+
 </table>
 
 <div class='row'>
