--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,11 +10,11 @@
   </tr>
   <tr>
     <th>follows</th>
-    <th><%= link_to user.relationships.count, relationships_follows_path(user.id) %></th>
+    <th><%= link_to user.relationships.count, follows_user_path(user.id) %></th>
   </tr>
   <tr>
     <th>followers</th>
-    <th><%= link_to user.reverse_of_relationships.count, relationships_followers_path(user.id) %></th>
+    <th><%= link_to user.reverse_of_relationships.count, followers_user_path(user.id) %></th>
 
   </tr>
 
